deploy/k8s/app/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: gophprofile
  labels:
    app.kubernetes.io/name: gophprofile
    app.kubernetes.io/component: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gophprofile
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gophprofile
        app.kubernetes.io/component: server
    spec:
      containers:
        - name: server
          image: gophprofile-server:local
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8080
      restartPolicy: Always
